# flxo

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  config.postgresql.example.toml  config.sqlite.example.toml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dee8b7937b6_make_property_json_and_set_on_all_models.py  0f0d45a5e795_add_constraints_on_presence.py  142f47182494_make_office_and_seat_optional.py  1593a8283ba9_rename_from_and_to_to_start_and_end.py  2b8b6525ecbf_implement_oauth2.py  4aab070bcf70_add_office_management.py  4d042d97cc1e_add_tz_support.py  891f0eac6a06_add_seat_overlap_detection.py  b1c2d3e4f5a6_unique_seat_date_slot.py  c2d3e4f5a6b7_drop_user_comment.py  dc02b8da8f0b_initial.py  e41c097f31c6_apply_modifications_from_fork.py  f3c9d2e1b4a5_presence_date_slot_state_user_profile.py
backend/flxo/: __init__.py  __main__.py
backend/flxo/api/: main.py
backend/flxo/api/dependencies/: auth.py  database.py  settings.py  user.py
backend/flxo/api/routers/: auth.py  office.py  presence.py  property.py  seat.py  user.py
backend/flxo/core/: __init__.py  exceptions.py  main.py  security.py  settings.py
backend/flxo/models/: __init__.py  ics_response.py  office.py  presence.py  property.py  seat.py  token.py  user.py
backend/flxo/routers/: auth.py  presence.py  user.py
backend/flxo/services/: auth.py  base.py  database.py  office.py  presence.py  property.py  seat.py  settings.py  user.py
frontend/: Dockerfile  FLOORPLAN.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.svelte  App.vue  api.js  app.css  colors.js  desks.js  state.js  vite-env.d.ts
frontend/src/components/: DeskPickerModal.vue  FloorPlan.vue  LoginView.vue  PersonForm.vue  PersonRow.vue  SlotCell.vue  WeekGrid.vue  WeekNav.vue
frontend/src/lib/: Calendar.svelte  Switch.svelte  Username.svelte  api.ts  constants.ts
frontend/src/lib/stores/: auth.ts
frontend/src/types/: presence.ts  user.ts
