[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "authlib>=1.6.5",
    "fastapi[all,standard]>=0.119.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]
