[project]
name = "flxo"
version = "0.1.0"
description = "Flex Office presence management tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "authlib>=1.6.5",
    "fastapi[all,standard]>=0.119.1",
    "ics>=0.7.2",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.11",
]
all = [
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "ty>=0.0.1a32",
]


[tool.setuptools.packages.find]
include = ["flxo"]

[tool.ty.src]
exclude = ["alembic"]

[tool.ruff]
preview = true
target-version = "py312"
line-length = 90
exclude = [".git"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "E", # pycodestyle: errors
    "EM", # flake8-errmsg
    "ERA", # flake8-eradicate
    "EXE", # flake8-executable
    "F", # Pyflakes
    "FBT", # flake8-boolean-trap
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INT", # flake8-gettext
    "LOG", # flake8-logging
    "N", # pep8-naming
    "PERF", # perflint
    "PIE", # flake8-pie
    "PLW", # pylint: warnings
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RUF013", # ruff: implicit-optional
    "RUF059", # ruff: unused-unpacked-variable
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "TD", # flake8-todos
    "T100", # flake8-debugger
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle: warnings
]

ignore = [
    "S101", # flake8-bandit: assert_used
    "TD003", # flake8-todos: missing-todo-link
    "EM101", # flake8-errmsg: raw-string-in-exception
    "B019", # flake8-bugbear: cached-instance-method
    "UP006", # pyupgrade: non-pep585-annotation
    "UP007", # pyupgrade: non-pep604-annotation-union
    "UP045", # pyupgrade: non-pep604-annotation-optional
]

# restrict to the PEP 257 rules
pydocstyle.convention = "pep257"

[tool.ruff.lint.isort.sections]
typing = ["typing"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "typing",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

